--- a/package.json
+++ b/package.json
@@ -25,12 +25,7 @@
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
     "react-native-web": "~0.11.7",
-    "react-redux": "^7.2.0",
-    "redux": "^4.0.5",
-    "redux-logger": "^3.0.6",
-    "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.3.0",
-    "reselect": "^4.0.0"
+    "swr": "^0.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
